--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/core": "^4.6.1",
     "@capacitor/geolocation": "^4.1.0",
     "@capacitor/ios": "^4.6.1",
-    "@capacitor/preferences": "^4.0.2"
+    "@capacitor/preferences": "^4.0.2",
+    "@capacitor/status-bar": "^4.1.1"
   }
 }
